<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <RelativeLayout
        android:paddingTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


            <ImageView
                android:id="@+id/iv"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
            android:layout_marginTop="16dp"
                android:id="@+id/Version_tv"
                android:text="V1.0"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/iv"
                android:textSize="@dimen/text_size_mediumex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginTop="32dp"
                android:layout_centerInParent="true"
                android:id="@+id/la"
               android:layout_below="@id/tv"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@mipmap/hotline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginLeft="16dp"
                    android:text="@string/service_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginLeft="16dp"
                    android:text="@string/service__photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_alignLeft="@id/la"
                android:layout_centerInParent="true"
                android:layout_below="@id/la"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@mipmap/website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginLeft="16dp"
                    android:text="@string/Official_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginLeft="16dp"
                    android:text="@string/official_web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


    </RelativeLayout>

</FrameLayout>
